--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="edtResetPasswordHint">Enter Email</string>
     <string name="btnResetPasswordText">Reset</string>
     <string name="txtResetPasswordSuccessDialogMessege">Link To Reset Password is sent into Given Email</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
